--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <i class="bx bx-menu" id="btn"></i>
       </div>
 
+	    <div class="bonus">
+			<img src="Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
+			onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
+		  </div>
 
       <ul class="nav-list">
         <li>
