--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
       <div class="text">
 			<img src="Tiranga.webp" alt="Tiranga Club" style="cursor: pointer;" 
 			onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
-				<h3>Azadi ka Amrit Mahotsav</h3>
-        <h3>EuroSchool HSR Proudly Presents</h3>
+				<div class="bonus" style="margin-top: 20px;">
+          <img style="width: 100%;" src="./images/Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
+          onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
+          </div>
          <h1 id="head" style="animation: 2.5s ease 0s 1 normal none running hanimation; opacity: 1;">Tiranga 2023</h1>
 		 <div class="btns">
 			<button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
@@ -59,10 +61,7 @@
       </div>
       <br>
           
-		  <div class="bonus">
-			<img src="Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
-			onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
-		  </div>
+		  
   
     </section>
     <section class="litfest" id="second">
