--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<img src="Tiranga.webp" alt="Tiranga Club" style="cursor: pointer;" 
 			onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
 				<div class="bonus" style="margin-top: 20px;">
-          <img style="width: 100%;" src="./images/Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
+          <img style="width: 100%;" src="Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
           onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
           </div>
          <h1 id="head" style="animation: 2.5s ease 0s 1 normal none running hanimation; opacity: 1;">Tiranga 2023</h1>
