--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <img style="width: 100%;" src="Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
           onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
           </div>
-         <h1 id="head" style="animation: 2.5s ease 0s 1 normal none running hanimation; opacity: 1;">Tiranga 2024</h1>
+<!--          <h1 id="head" style="animation: 2.5s ease 0s 1 normal none running hanimation; opacity: 1;">Tiranga 2024</h1> -->
 		 <div class="btns">
 			<button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
 				Login
