--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
      
       <div class="text">
 			<img src="Tiranga.webp" alt="Tiranga Club" style="cursor: pointer;" 
-			onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
+			onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww.lottery7j.com%2F%23%2Fregister%3FinvitationCode%3D5147113971482');">
 				<div class="bonus" style="margin-top: 40px;">
           <img style="width: 100%;" src="Tiranga-Games-Homepage.jpg" alt="Tiranga Club" style="cursor: pointer;" 
-          onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
+          onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww.lottery7j.com%2F%23%2Fregister%3FinvitationCode%3D5147113971482');">
           </div>
 <!--          <h1 id="head" style="animation: 2.5s ease 0s 1 normal none running hanimation; opacity: 1;">Tiranga 2024</h1> -->
 		 <div class="btns">
-			<button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
+			<button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww.lottery7j.com%2F%23%2Fregister%3FinvitationCode%3D5147113971482');">
 				Login
 			</button>
 			
-			<button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww%2Etirangaclub%2Eorg%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
+			<button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fwww.lottery7j.com%2F%23%2Fregister%3FinvitationCode%3D5147113971482');">
 				Register
 			</button>
 		 </div>
