--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <button class="custom-btn" onclick="window.location.href='https://t.me/aviblasting';">
                   <i class="bx bxl-telegram"></i> Contact Us
               </button>
-              <button class="custom-btn" onclick="window.location.href='https://t.me/aviblasting';">
+              <button class="custom-btn" onclick="window.location.href='https://t.me/nobody_84';">
                   <i class="bx bxl-telegram"></i> Support for Queries
               </button>
           </div>
