--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
     <section class="header">
       <div class="text">
-          <img src="Tiranga.webp" alt="Tiranga Club" style="cursor: pointer;"
+          <img src="oklogo0.jpg" alt="OkWin Club" style="cursor: pointer;"
               onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
   
           <div class="bonus" style="margin-top: 20px;">
-              <img style="width: 100%;" src="Tiranga-Games-Homepage.jpg" alt="Tiranga Club"
+              <img style="width: 100%;" src="cp.png" alt="OkWin Club"
                   style="cursor: pointer;"
                   onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
           </div>
