--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section class="header">
       <div class="text">
-          <img src="oklogo0.jpg" alt="OkWin Club" style="cursor: pointer;"
+          <img src="oklogo.jpg" alt="OkWin Club" style="cursor: pointer;"
               onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
   
           <div class="bonus" style="margin-top: 20px;">
