--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
     <section class="header">
       <div class="text">
           <img src="oklogo.jpg" alt="OkWin Club" style="cursor: pointer;"
-              onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
+              onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
   
           <div class="bonus" style="margin-top: 20px;">
               <img style="width: 100%;" src="cp.png" alt="OkWin Club"
                   style="cursor: pointer;"
-                  onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
+                  onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
           </div>
   
           <div class="btns">
             
-            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
+            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
               Login
             </button>
             
-            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https://kwgbet1.com/#/register?invitationCode=6J56233349');">
+            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
               Register
             </button>
           </div>
