--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
 
     <section class="header">
       <div class="text">
-          <img src="oklogo.jpg" alt="OkWin Club" style="cursor: pointer;"
-              onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
+          <img src="Tiranga.webp" alt="OkWin Club" style="cursor: pointer;"
+              onclick="window.location.href=decodeURIComponent('https%3A%2F%2Ftirangaclub.org%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
   
           <div class="bonus" style="margin-top: 20px;">
-              <img style="width: 100%;" src="cp.png" alt="OkWin Club"
+              <img style="width: 100%;" src="Tiranga-Games-Homepage.jpg" alt="OkWin Club"
                   style="cursor: pointer;"
-                  onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
+                  onclick="window.location.href=decodeURIComponent('https%3A%2F%2Ftirangaclub.org%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
           </div>
   
           <div class="btns">
             
-            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
+            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Ftirangaclub.org%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
               Login
             </button>
             
-            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Fkwgbet1.com%2F%23%2Fregister%3FinvitationCode%3D6J56233349');">
+            <button class="logbtn" onclick="window.location.href=decodeURIComponent('https%3A%2F%2Ftirangaclub.org%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
               Register
             </button>
           </div>
