--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               onclick="window.location.href=decodeURIComponent('https%3A%2F%2Ftirangaclub.org%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
   
           <div class="bonus" style="margin-top: 20px;">
-              <img style="width: 100%;" src="Tiranga-Games-Homepage.jpg" alt="OkWin Club"
+              <img style="width: 100%;" src="" alt="OkWin Club"
                   style="cursor: pointer;"
                   onclick="window.location.href=decodeURIComponent('https%3A%2F%2Ftirangaclub.org%2F%23%2Fregister%3FinvitationCode%3D1757216983833');">
           </div>
